refactor: delete /api/profiles/${username}/follow を OpenAPI Generator で生成したコードに移行
