# src/main/kotlin/com/example/realworldkotlinspringbootjdbc/presentation/ProfileController.kt
@@ -1,7 +1,5 @@
 package com.example.realworldkotlinspringbootjdbc.presentation
 
-import arrow.core.Either.Left
-import arrow.core.Either.Right
 import arrow.core.Some
 import arrow.core.none
 import arrow.core.toOption
@@ -9,9 +7,6 @@ import com.example.realworldkotlinspringbootjdbc.openapi.generated.controller.Pr
 import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.GenericErrorModel
 import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.GenericErrorModelErrors
 import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.ProfileResponse
-import com.example.realworldkotlinspringbootjdbc.presentation.response.Profile
-import com.example.realworldkotlinspringbootjdbc.presentation.response.serializeUnexpectedErrorForResponseBody
-import com.example.realworldkotlinspringbootjdbc.presentation.shared.AuthorizationError
 import com.example.realworldkotlinspringbootjdbc.presentation.shared.RealworldAuthenticationUseCaseUnauthorizedException
 import com.example.realworldkotlinspringbootjdbc.usecase.profile.FollowProfileUseCase
 import com.example.realworldkotlinspringbootjdbc.usecase.profile.ShowProfileUseCase
@@ -20,11 +15,8 @@ import com.example.realworldkotlinspringbootjdbc.usecase.shared.RealworldAuthent
 import com.example.realworldkotlinspringbootjdbc.util.MyAuth
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
-import org.springframework.web.bind.annotation.DeleteMapping
 import org.springframework.web.bind.annotation.ExceptionHandler
-import org.springframework.web.bind.annotation.RequestHeader
 import org.springframework.web.bind.annotation.RestController
-import javax.websocket.server.PathParam
 
 @RestController
 class ProfileController(
@@ -138,50 +130,76 @@ class ProfileController(
             )
         }
 
-    @DeleteMapping("/profiles/{username}/follow")
-    fun unfollow(
-        @RequestHeader("Authorization") rawAuthorizationHeader: String?,
-        @PathParam("username") username: String?
-    ): ResponseEntity<String> {
-        return when (val authorizeResult = myAuth.authorize(rawAuthorizationHeader)) {
-            /**
-             * JWT 認証 失敗
-             */
-            is Left -> AuthorizationError.handle()
-            /**
-             * JWT 認証 成功
-             */
-            is Right -> when (
-                val unfollowedProfile =
-                    unfollowProfileUseCase.execute(username, authorizeResult.value)
-            ) {
-                /**
-                 * プロフィールのアンフォローに失敗
-                 */
-                is Left -> when (unfollowedProfile.value) {
-                    /**
-                     * 原因: Username が不正
-                     */
-                    is UnfollowProfileUseCase.Error.InvalidUsername -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                    /**
-                     * 原因: Profile が見つからなかった
-                     */
-                    is UnfollowProfileUseCase.Error.NotFound -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                }
-                /**
-                 * プロフィールのアンフォローに成功
-                 */
-                is Right -> ResponseEntity(
-                    Profile.from(unfollowedProfile.value).serializeWithRootName(),
-                    HttpStatus.valueOf(200)
-                )
-            }
-        }
+    override fun unfollowUserByUsername(authorization: String, username: String): ResponseEntity<ProfileResponse> {
+        /**
+         * JWT 認証
+         */
+        val currentUser = realworldAuthenticationUseCase.execute(authorization).fold(
+            { throw RealworldAuthenticationUseCaseUnauthorizedException(it) },
+            { it }
+        )
+
+        val unfollowProfileResult = unfollowProfileUseCase.execute(username, currentUser).fold(
+            { throw TODO() },
+            { it }
+        )
+        return ResponseEntity(
+            ProfileResponse(
+                com.example.realworldkotlinspringbootjdbc.openapi.generated.model.Profile(
+                    username = unfollowProfileResult.username.value,
+                    bio = unfollowProfileResult.bio.value,
+                    image = unfollowProfileResult.image.value,
+                    following = unfollowProfileResult.following
+                ),
+            ),
+            HttpStatus.OK
+        )
     }
+
+    // @DeleteMapping("/profiles/{username}/follow")
+    // fun unfollow(
+    //     @RequestHeader("Authorization") rawAuthorizationHeader: String?,
+    //     @PathParam("username") username: String?
+    // ): ResponseEntity<String> {
+    //     return when (val authorizeResult = myAuth.authorize(rawAuthorizationHeader)) {
+    //         /**
+    //          * JWT 認証 失敗
+    //          */
+    //         is Left -> AuthorizationError.handle()
+    //         /**
+    //          * JWT 認証 成功
+    //          */
+    //         is Right -> when (
+    //             val unfollowedProfile =
+    //                 unfollowProfileUseCase.execute(username, authorizeResult.value)
+    //         ) {
+    //             /**
+    //              * プロフィールのアンフォローに失敗
+    //              */
+    //             is Left -> when (unfollowedProfile.value) {
+    //                 /**
+    //                  * 原因: Username が不正
+    //                  */
+    //                 is UnfollowProfileUseCase.Error.InvalidUsername -> ResponseEntity(
+    //                     serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
+    //                     HttpStatus.valueOf(404)
+    //                 )
+    //                 /**
+    //                  * 原因: Profile が見つからなかった
+    //                  */
+    //                 is UnfollowProfileUseCase.Error.NotFound -> ResponseEntity(
+    //                     serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
+    //                     HttpStatus.valueOf(404)
+    //                 )
+    //             }
+    //             /**
+    //              * プロフィールのアンフォローに成功
+    //              */
+    //             is Right -> ResponseEntity(
+    //                 Profile.from(unfollowedProfile.value).serializeWithRootName(),
+    //                 HttpStatus.valueOf(200)
+    //             )
+    //         }
+    //     }
+    // }
 }
